--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Dicee</string>
+    <string name="roll">Roll</string>
+    <string name="left_dicee">Left Dicee</string>
+    <string name="logo">Logo</string>
+    <string name="right_dicee">Right Dicee</string>
+    <string name="string_right_dicee">Right Dicee</string>
 </resources>
